add launch screen add cancel button to TimerView change behaviour for saving new timer value that resets the workout and steps change the title of the breath set view change default app colour to orange.

--- a/Breathwork Pacer/Data/settings.plist
+++ b/Breathwork Pacer/Data/settings.plist
@@ -7,7 +7,7 @@
 	<key>defaultAnimation</key>
 	<string>circleAnimation</string>
 	<key>defaultColor</key>
-	<string>blue</string>
+	<string>orange</string>
 	<key>defaultSound</key>
 	<string>none</string>
 </dict>
